assets/demo.css
/*
Copyright 2024 D-Wave

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

/*******************************************************************
This file contains all custom CSS for this demo.
The following style rules can be altered or removed and any additional
custom CSS can be added below.
*******************************************************************/

.tab-content-wrapper {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.tab-content-wrapper > div {
    height: calc(50vh - var(--banner-height)/2);
    margin: 1rem;
}

.progress {
    background: rgba(255, 255, 255, 0.25);
}

#coupling_strength {
    padding-left: 5px !important;
    padding-right: 5px !important;
}

#graph-selection-radio {
    margin-top: 10px;
    margin-left: 20px;
}

.form-control {
    width: auto;
}

.display-none {
    display: none;
}

.error {
    box-shadow: 0 0 0 0.25rem red;
}

.caption {
    font-size: 0.875rem;
    margin: 0.5rem 0;
}

.caption span {
    font-weight: 600;
}

